recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:13: error: ';' expected but ')' found.
				gauche(360-360/sides))
                                                     ^